fixed styles : "visibleIf" for choices

--- a/src/main.scss
+++ b/src/main.scss
@@ -9,7 +9,8 @@
 @import "properties";
 .svd_container {
   position: relative;
-  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans",
+    "Helvetica Neue", Arial, sans-serif;
   font-size: 12px;
   #testSurveyPageChanged {
     width: 300px;
@@ -45,6 +46,10 @@
   .svd-drag-handle {
     font-size: 20px;
     cursor: move;
+  }
+  .svd-itemvalue-action {
+    display: inline-block;
+    vertical-align: middle;
   }
   .form-control {
     border-radius: 2px;
@@ -87,7 +92,7 @@
       padding: 0;
     }
     .ddmenu-container {
-      .ddmenu>span {
+      .ddmenu > span {
         padding: 6px 12px;
       }
       ul {
